# elsm

./: Cargo.toml
.github/ISSUE_TEMPLATE/: bug-report.md  question.md
.github/workflows/: ci.yml
src/: consistent_hash.rs  index_batch.rs  lib.rs  mem_table.rs  oracle.rs  record.rs  schema.rs  scope.rs  transaction.rs  user.rs  utils.rs
src/benchs/: Cargo.toml
src/benchs/src/: main.rs
src/compactor/: mod.rs
src/elsm_marco/: Cargo.toml
src/elsm_marco/src/: keys.rs  lib.rs  schema_model.rs
src/index_batch/: mod.rs  stream.rs
src/iterator/: buf_iterator.rs  merge_iterator.rs  mod.rs
src/mem_table/: mod.rs  stream.rs
src/serdes/: arc.rs  boolean.rs  mod.rs  num.rs  option.rs  string.rs
src/stream/: batch_stream.rs  buf_stream.rs  level_stream.rs  merge_inner_stream.rs  merge_stream.rs  mod.rs  table_stream.rs
src/version/: cleaner.rs  edit.rs  mod.rs  set.rs
src/wal/: checksum.rs  mod.rs
src/wal/provider/: fs.rs  in_mem.rs  mod.rs
