[package]
edition = "2021"
name = "elsm"
version = "0.1.0"

[dependencies]
arrow = "51"
async-channel = "2"
async-lock = "3"
async-stream = "0.3"
crc32fast = "1"
crossbeam-queue = "0.3"
executor = { git = "https://github.com/ethe/executor.git", branch = "main" }
futures = "0.3"
fxhash = "0.2"
# replace them with std::sync::lazy, once stabilized
lazy_static = "1"
once_cell = "1"
parquet = { version = "51", features = ["async"] }
pin-project = "1"
pin-project-lite = "0.2"
regex = "1"
snowflake = "1"
thiserror = "1"
tracing = "0.1"
unsend = "0.2"

[dev-dependencies]
tempfile = "3"
